# MasgentNova

./: .env.example  .gitignore  LICENSE  README.md  README01.md  affo  pyproject.toml  pytest.ini  requirements.txt
docs/: installation.md  quickstart.md
docs/design/: file_lock.md  recovery.md  task_lifecycle.md
docs/developer_guide/: adding_calculator.md  architecture.md
docs/user_guide/: executor.md  task_runner.md  workflow.md
scripts/: run_cached_calculator.py  run_eos_fit.py  run_eos_workflow.py  run_mock_eos.py  run_task_store.py  run_vasp_calculator.py  run_vasp_real.py  setup.sh
src/masgent/: _config.py  app.py  cli.py
test_tasks/: _index.json  cache_474de366.json  task_83353678.json  task_b2742012.json
tests/: conftest.py  mock_calculator.py  mock_executors.py  test_interface_maker.py  test_ml_cvae.py  test_ml_nn_design.py  test_ml_nn_train.py  test_schemas.py  test_tools.py  test_utils.py  test_workflows.py
tests/calculators/: test_vasp_calculator.py  test_vasp_execution.py  test_vasp_relax.py
tests/executors/: test_executor_factory.py  test_executor_persistence.py  test_executor_recovery.py  test_local_executor.py  test_slurm_executor.py
tests/integration/: test_application_start.py  test_crash_e2e.py  test_crash_recovery.py  test_execute_lifecycle.py  test_executor_full_restore.py  test_executor_validation.py  test_file_lock.py  test_idempotent_resume.py  test_poll_exception.py  test_race.py  test_recover_after_restart.py  test_recovery_edge_cases.py  test_recovery_event_persistence.py  test_recovery_lock.py  test_slurm_real.py  test_slurm_recovery.py  test_task_runner_executor_recover.py  test_timeout_recovery.py  test_unknown_auto_integration.py  test_unknown_retry.py  test_unknown_strategy_matrix.py
tests/models/: test_job.py  test_task.py  test_task_persistence.py
tests/task_runner/: test_classify_unknown.py  test_poll_retry.py  test_recovery_event.py  test_task_runner_recover.py  test_task_runner_submit.py
tests/task_store/: test_json_task_store.py
tests/tasks/: test_cancel.py  test_collect_cancelled.py  test_recover_scenarios.py
(+115 files in other folders)
